--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 # PostgreSQL. Versions 9.1 and up are supported.
 #
 # Install the pg driver:
-#   gem install pg
+#     gem install pg
 # On OS X with Homebrew:
 #   gem install pg -- --with-pg-config=/usr/local/bin/pg_config
 # On OS X with MacPorts:
@@ -83,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: desafio_rd_production
-  username: pguser
-  password: <%= ENV['TESTE_PG_DATABASE_PASSWORD'] %>
+  database: dbcee3gpd7c7fl
+  username: qkqzllrdolabpl
+  password: EEp6BYJRXTuYifk2sYrUPAuKty
